--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     <script src="app.js"></script>
     <script src="footer.js"></script>
     <script src="script.js"></script>
+    <script src="style.js"></script>
   </body>
 </html>
